--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,12 @@
   "functions": {
     "api/*.js": {
       "maxDuration": 30
+    },
+    "api/oauth/*.js": {
+      "maxDuration": 10
+    },
+    "api/.well-known/*.js": {
+      "maxDuration": 10
     }
   },
   "rewrites": [
@@ -20,6 +26,26 @@
     {
       "source": "/messages",
       "destination": "/api/mcp-claude"
+    },
+    {
+      "source": "/.well-known/oauth-authorization-server",
+      "destination": "/api/.well-known/oauth-authorization-server"
+    },
+    {
+      "source": "/.well-known/oauth-protected-resource",
+      "destination": "/api/.well-known/oauth-protected-resource"
+    },
+    {
+      "source": "/api/oauth/authorize",
+      "destination": "/api/oauth/authorize"
+    },
+    {
+      "source": "/api/oauth/token",
+      "destination": "/api/oauth/token"
+    },
+    {
+      "source": "/api/oauth/register",
+      "destination": "/api/oauth/register"
     },
     {
       "source": "/",
@@ -49,6 +75,19 @@
         {
           "key": "MCP-Protocol-Version",
           "value": "2024-11-05"
+        }
+      ]
+    },
+    {
+      "source": "/.well-known/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Content-Type",
+          "value": "application/json"
         }
       ]
     }
