--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,6 @@
     },
     "api/oauth/*.js": {
       "maxDuration": 10
-    },
-    "api/.well-known/*.js": {
-      "maxDuration": 10
     }
   },
   "rewrites": [
@@ -29,11 +26,11 @@
     },
     {
       "source": "/.well-known/oauth-authorization-server",
-      "destination": "/api/.well-known/oauth-authorization-server"
+      "destination": "/api/oauth-authorization-server"
     },
     {
       "source": "/.well-known/oauth-protected-resource",
-      "destination": "/api/.well-known/oauth-protected-resource"
+      "destination": "/api/oauth-protected-resource"
     },
     {
       "source": "/api/oauth/authorize",
